// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns article results when searching article R1225-18 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 22.628408,
      "cdtnId": "50195f324b",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [],
  "themes": Array [
    Object {
      "_score": 1.0536091,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
      ],
      "cdtnId": "a9ccf1d613",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.0524166,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "e4982f0aa9",
      "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
      "slug": "8-depart-de-lentreprise",
      "source": "themes",
      "title": "Départ de l'entreprise",
    },
    Object {
      "_score": 1.0459089,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "5594695039",
      "description": "Vous venez de trouver un travail, vous embauchez un salarié ou un apprenti ? Vous souhaitez faire une déclaration préalable à l’embauche, rédiger un contrat de travail (CDI, CDD, travail temporaire, temps plein, temps partiel) ? Retrouvez toutes nos réponses ici.  ",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;

exports[`returns search results for demission from datafiller 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 3.2706828,
      "cdtnId": "50195f324b",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "8c42435f9a",
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "5d4a0ee541",
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission",
      "source": "page_fiche_ministere_travail",
      "title": "La démission",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "eed9ab7d0a",
      "description": "Le Code du travail ne prévoit aucune forme particulière pour présenter sa démission : elle peut être verbale, écrite ou résulter d’un comportement sans ambiguïté du salarié (ce qui n’est pas le cas, p",
      "slug": "la-demission#Comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission : comment présenter une démission ?",
    },
    Object {
      "algo": "pre-qualified",
      "position": 2,
      "source": "external",
      "title": "Peut-on percevoir l'allocation chômage en cas de démission ?",
      "url": "/fiche-service-public/peut-on-percevoir-lallocation-chomage-en-cas-de-demission",
    },
    Object {
      "algo": "pre-qualified",
      "position": 3,
      "source": "external",
      "title": "La démission : faut-il respecter un préavis ?",
      "url": "/fiche-ministere-travail/la-demission#Faut-il-respecter-un-preavis",
    },
    Object {
      "algo": "pre-qualified",
      "position": 4,
      "source": "external",
      "title": "Peut-on démissionner pendant ses congés payés ?",
      "url": "/fiche-service-public/peut-on-demissionner-pendant-ses-conges-payes",
    },
    Object {
      "algo": "pre-qualified",
      "position": 5,
      "source": "external",
      "title": "Peut-on démissionner pendant un arrêt maladie ?",
      "url": "/fiche-service-public/peut-on-demissionner-pendant-un-arret-maladie",
    },
    Object {
      "algo": "pre-qualified",
      "position": 6,
      "source": "external",
      "title": "La démission : le salarié peut-il « démissionner » dans le cadre d’un contrat à durée déterminée ?",
      "url": "/fiche-ministere-travail/la-demission#Le-salarie-peut-il-lt-lt-demissionner-dans-le-cadre-d-un-contrat-a-nbsp",
    },
    Object {
      "algo": "pre-qualified",
      "position": 7,
      "source": "external",
      "title": "La démission : le refus, par le salarié, d’accepter un changement des conditions de travail est-il une démission ?",
      "url": "/fiche-ministere-travail/la-demission#Le-refus-par-le-salarie-d-accepter-un-changement-des-conditions-de-nbsp",
    },
    Object {
      "algo": "pre-qualified",
      "position": 8,
      "source": "external",
      "title": "La démission : et les heures pour recherche d’emploi ?",
      "url": "/fiche-ministere-travail/la-demission#Et-les-heures-pour-recherche-d-emploi",
    },
    Object {
      "algo": "pre-qualified",
      "position": 9,
      "source": "external",
      "title": "Peut-on démissionner pendant un congé maternité ?",
      "url": "/fiche-service-public/peut-on-demissionner-pendant-un-conge-maternite",
    },
    Object {
      "algo": "pre-qualified",
      "position": 10,
      "source": "external",
      "title": "Peut-on démissionner pendant un congé parental ?",
      "url": "/fiche-service-public/peut-on-demissionner-pendant-un-conge-parental",
    },
    Object {
      "algo": "pre-qualified",
      "position": 11,
      "source": "external",
      "title": "Démission du salarié à domicile employé par un particulier",
      "url": "/fiche-service-public/demission-du-salarie-a-domicile-employe-par-un-particulier",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "38474d168c",
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "algo": "pre-qualified",
      "position": 13,
      "source": "external",
      "title": "Article L1231-1",
      "url": "/code-du-travail/l1231-1",
    },
    Object {
      "algo": "pre-qualified",
      "position": 15,
      "source": "external",
      "title": "Article L1237-2",
      "url": "/code-du-travail/l1237-2",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.920247,
      "algo": "fulltext",
      "cdtnId": "a9ccf1d613",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.1675584,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "5594695039",
      "description": "Vous venez de trouver un travail, vous embauchez un salarié ou un apprenti ? Vous souhaitez faire une déclaration préalable à l’embauche, rédiger un contrat de travail (CDI, CDD, travail temporaire, temps plein, temps partiel) ? Retrouvez toutes nos réponses ici.  ",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "_score": 1.1528966,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "e4982f0aa9",
      "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
      "slug": "8-depart-de-lentreprise",
      "source": "themes",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;

exports[`returns search results for demission from elastic 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 3.2706828,
      "cdtnId": "50195f324b",
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 3.1512175,
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 9.907198,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "8c42435f9a",
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 1.3781179,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "eed9ab7d0a",
      "description": "Le Code du travail ne prévoit aucune forme particulière pour présenter sa démission : elle peut être verbale, écrite ou résulter d’un comportement sans ambiguïté du salarié (ce qui n’est pas le cas, p",
      "slug": "la-demission#Comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission : comment présenter une démission ?",
    },
    Object {
      "_score": 9.653719,
      "action": "Calculer",
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "1eea193273",
      "description": "Calculez la durée de préavis à respecter en cas de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Préavis de démission",
    },
    Object {
      "_score": 8.605516,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "38474d168c",
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "_score": 4.4587755,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
      ],
      "cdtnId": "8c3014ce56",
      "description": "En cas d’absence prolongée de l’entreprise sans justification valable (par exemple, un arrêt de travail), ou d’absence de reprise du travail après un arrêt de travail, il n’est pas possible pour l’emp",
      "slug": "la-demission#L-absence-prolongee-du-salarie-est-elle-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission : l’absence prolongée du salarié est-elle une démission ?",
    },
    Object {
      "_score": 2.8901207,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/80-documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "59a4d4173c",
      "description": "Le certificat de travail est un document remis par l'employeur au salarié à la date de fin du contrat de travail. Il est remis au salarié pour tout type de contrat de travail (CDI, CDD...), quel que soit le motif de la rupture (démission, licenciement...).",
      "slug": "certificat-de-travail",
      "source": "fiches_service_public",
      "title": "Certificat de travail",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F87",
    },
    Object {
      "_score": 1.2841135,
      "action": "Estimer",
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Licenciement : droits des salariés et procédures",
          "slug": "/themes/84-licenciement-droits-des-salaries-et-procedures",
        },
      ],
      "cdtnId": "d8a3605790",
      "description": "Estimez simplement le montant de l’indemnité de licenciement",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Indemnité de licenciement",
    },
    Object {
      "_score": 1.2357258,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Embauche et contrat de travail",
          "slug": "/themes/1-embauche-et-contrat-de-travail",
        },
        Object {
          "label": "Embauche",
          "slug": "/themes/11-embauche",
        },
        Object {
          "label": "Période d'essai",
          "slug": "/themes/113-periode-dessai",
        },
      ],
      "cdtnId": "772cb955ce",
      "description": "Pendant la période d’essai, le contrat de travail peut être rompu librement par l’employeur. L’employeur doit dans ce cas informer le salarié et respecter un délai de prévenance.",
      "slug": "rupture-de-periode-dessai-a-linitiative-de-lemployeur",
      "source": "modeles_de_courriers",
      "title": "Rupture de période d’essai à l’initiative de l’employeur",
    },
    Object {
      "_score": 1.1560779,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Rupture conventionnelle",
          "slug": "/themes/83-rupture-conventionnelle",
        },
        Object {
          "label": "Rupture conventionnelle individuelle",
          "slug": "/themes/831-rupture-conventionnelle-individuelle",
        },
      ],
      "cdtnId": "a712ecb976",
      "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
      "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
      "source": "modeles_de_courriers",
      "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
    },
    Object {
      "_score": 1.1512249,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/80-documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "19837df114",
      "description": "Le certificat de travail est un document obligatoire remis par l’employeur au salarié à la date de fin du contrat de travail.",
      "slug": "certificat-de-travail",
      "source": "modeles_de_courriers",
      "title": "Certificat de travail",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.920247,
      "algo": "fulltext",
      "cdtnId": "a9ccf1d613",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.1675584,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "5594695039",
      "description": "Vous venez de trouver un travail, vous embauchez un salarié ou un apprenti ? Vous souhaitez faire une déclaration préalable à l’embauche, rédiger un contrat de travail (CDI, CDD, travail temporaire, temps plein, temps partiel) ? Retrouvez toutes nos réponses ici.  ",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "_score": 1.1528966,
      "algo": "semantic",
      "breadcrumbs": Array [],
      "cdtnId": "e4982f0aa9",
      "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
      "slug": "8-depart-de-lentreprise",
      "source": "themes",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;

exports[`returns unique documents from prequalified data (same slug but different source) 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 0.92252207,
      "cdtnId": "ea03713a82",
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/80-documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "19837df114",
      "description": "Le certificat de travail est un document obligatoire remis par l’employeur au salarié à la date de fin du contrat de travail.",
      "slug": "certificat-de-travail",
      "source": "modeles_de_courriers",
      "title": "Certificat de travail",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/80-documents-a-remettre-au-salarie",
        },
      ],
      "cdtnId": "59a4d4173c",
      "description": "Le certificat de travail est un document remis par l'employeur au salarié à la date de fin du contrat de travail. Il est remis au salarié pour tout type de contrat de travail (CDI, CDD...), quel que soit le motif de la rupture (démission, licenciement...).",
      "slug": "certificat-de-travail",
      "source": "fiches_service_public",
      "title": "Certificat de travail",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F87",
    },
  ],
  "themes": Array [
    Object {
      "_score": 2.5288277,
      "algo": "fulltext",
      "cdtnId": "5594695039",
      "icon": "Contract",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "_score": 1.0536091,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "label": "Départ de l'entreprise",
          "slug": "/themes/8-depart-de-lentreprise",
        },
      ],
      "cdtnId": "a9ccf1d613",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 0.8618989,
      "algo": "fulltext",
      "cdtnId": "e4982f0aa9",
      "icon": "Depart",
      "slug": "8-depart-de-lentreprise",
      "source": "themes",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;
